[metadata]
name = myWallet
version = 0.1
author = Otomator Otomator
author_email = contact@otomato.io
description = pytest tutorial
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/otomato-gh/pytest-tutorial
project_urls =
    Bug Tracker = https://github.com/otomato-gh/pytest-tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
